--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <select name="payee" id="payee-select">
         <option>Other</option>
     </select>
-    <input name="payee-other" id="payee-other" style="display: none;" />
+    <input name="payee-other" id="payee-other" />
     <br />
     <span id="entries">
         <select name="account_1" class="account">
             <option>Other</option>
         </select>
-        <input name="account_other_1" id="account_other_1" style="display: none;" class="amount_other" />
+        <input name="account_other_1" id="account_other_1" class="amount_other" />
         <input name="amount_1" type="number" class="amount" />
         <br />
         <select name="account_2" class="account">
             <option>Other</option>
         </select>
-        <input name="account_other_2" id="account_other_2" style="display: none;" class="amount_other" />
+        <input name="account_other_2" id="account_other_2"  class="amount_other" />
         <input name="amount_2" type="number" class="amount" />
         <br />
     </span>
