--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="ledger-web.css" type="text/css">
-    </link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="ledger-web.js" defer></script>
 </head>
 
@@ -23,18 +23,24 @@
     <input name="payee-other" id="payee-other" />
     <br />
     <span id="entries">
+        <span id="input_line_1">
+            <i class="fa-solid fa-minus" style="visibility: hidden"></i>
+        <i class="fa-solid fa-plus" style="visibility: hidden"></i>
         <select name="account_1" class="account">
             <option>Other</option>
         </select>
         <input name="account_other_1" id="account_other_1" class="amount_other" />
         <input name="amount_1" type="number" class="amount" />
-        <br />
+        <br /></span>
+        <span id="input_line_2"><i class="fa-solid fa-minus" style="visibility: hidden"></i>
+        <i class="fa-solid fa-plus" style="cursor: pointer;" onclick="addLineItem()"></i>
         <select name="account_2" class="account">
             <option>Other</option>
         </select>
-        <input name="account_other_2" id="account_other_2"  class="amount_other" />
+        <input name="account_other_2" id="account_other_2" class="amount_other" />
         <input name="amount_2" type="number" class="amount" />
-        <br />
+        <br /></span>
+        <span id="xtra-entries"></span>
     </span>
     <button id="process-entry">Process Entry</button>
     <button id="copy-results">Copy Results</button>
