--- a/index.html
+++ b/index.html
@@ -17,33 +17,27 @@
     <br />
     <input name="date" type="date" id="the-date" />
     <input name="check" type="number" id="check" />
-    <select name="payee" id="payee-select">
-        <option>Other</option>
-    </select>
-    <input name="payee-other" id="payee-other" />
+    <input name="payee-input" id="payee-input" list="payeeList" />
+    <datalist id="payeeList"></datalist>
     <br />
+    <datalist id="accountsList"></datalist>
     <span id="entries">
         <span id="input_line_1">
             <i class="fa-solid fa-minus" style="visibility: hidden"></i>
-        <i class="fa-solid fa-plus" style="visibility: hidden"></i>
-        <select name="account_1" class="account">
-            <option>Other</option>
-        </select>
-        <input name="account_other_1" id="account_other_1" class="amount_other" />
-        <input name="amount_1" type="number" class="amount" />
-        <br /></span>
+            <i class="fa-solid fa-plus" style="visibility: hidden"></i>
+            <input name="account-input_1" class="account_input" list="accountsList" />
+            <input name="amount_1" type="number" class="amount" />
+            <br /></span>
         <span id="input_line_2"><i class="fa-solid fa-minus" style="visibility: hidden"></i>
-        <i class="fa-solid fa-plus" style="cursor: pointer;" onclick="addLineItem()"></i>
-        <select name="account_2" class="account">
-            <option>Other</option>
-        </select>
-        <input name="account_other_2" id="account_other_2" class="amount_other" />
-        <input name="amount_2" type="number" class="amount" />
-        <br /></span>
+            <i class="fa-solid fa-plus" style="cursor: pointer;" onclick="addLineItem()"></i>
+            <input name="account-input_2" class="account_input" list="accountsList" />
+            <input name="amount_2" type="number" class="amount" />
+            <br /></span>
         <span id="xtra-entries"></span>
     </span>
     <button id="process-entry">Process Entry</button>
     <button id="copy-results">Copy Results</button>
+    <!-- TODO: See if we can add a button to copy current Payees and Accounts not in definitions -->
     <button id="clear-results">Clear Results</button>
     <br />
     <span id="results"></span>
