Add button to copy extra account and payees

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </span>
     <button id="process-entry">Process Entry</button>
     <button id="copy-results">Copy Results</button>
-    <!-- TODO: See if we can add a button to copy current Payees and Accounts not in definitions -->
+    <button id="copy-xtras">Copy New Accounts</button>
     <button id="clear-results">Clear Results</button>
     <br />
     <span id="results"></span>
